--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
 				<div class="col-md-6 animate-box">
 					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="C:\Users\b5102\Desktop\blog\public\images\VID20220101000019.mp4" class="popup-vimeo"><i class="icon-video2"></i></a>
+						<a href="\110910531\finalweb\images\VID20220101000019.mp4" class="popup-vimeo"><i class="icon-video2"></i></a>
 						<div class="overlay"></div>
 					</div>
 				</div>
