--- a/index.html
+++ b/index.html
@@ -508,10 +508,7 @@
 				</div>
 
 				<div class="col-md-6 animate-box">
-					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="https://github.com/al2698/finalweb/blob/adbe75bc5beb4ef200dff244c0da88d4fd043a76/images/VID20220101000019.mp4" class="popup-vimeo"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
-					</div>
+					<iframe title="vimeo-player" src="https://player.vimeo.com/video/665810646?h=f59a61dc36" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 
