--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							<h1>寒假開始</h1>
 							<h2>Getting Ready For Winter Vacation</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">leave a message</a></p>
+							<p><a href="http://172.104.100.202:7032/" class="btn btn-default btn-sm">leave a message</a></p>
 						</div>
 					</div>
 				</div>
